Fixed sction updates. Discovered problems with the un-blurred changes dissapearing when moving objects between sections

--- a/src/formbuilder/formbuilder-application/src/components/answerComponents/AnswerComponent.css
+++ b/src/formbuilder/formbuilder-application/src/components/answerComponents/AnswerComponent.css
@@ -25,7 +25,7 @@
     box-shadow: 0 0 0 2px rgba(166,30,123, .2) !important;
 }
 
-.ant-checkbox-inner, .ant-checkbox-checked::after, .ant-btn:hover, .ant-btn:focus, .input-question, .ant-select-selector, .ant-btn-default, .input-question:hover{
+.ant-input, .ant-input:hover, .ant-checkbox-inner, .ant-checkbox-checked::after, .ant-btn:hover, .ant-btn:focus, .input-question, .ant-select-selector, .ant-btn-default, .input-question:hover{
     border-color: var(--primary-1) !important;
 }
 
